# kuaiyin-cloud/kuaiyin-video/api/helloworld/v1/greeter_grpc.pb.go
@@ -20,7 +20,6 @@ const _ = grpc.SupportPackageIsVersion7
 
 const (
 	Greeter_SayHello_FullMethodName = "/helloworld.v1.Greeter/SayHello"
-	Greeter_Video_FullMethodName    = "/helloworld.v1.Greeter/Video"
 )
 
 // GreeterClient is the client API for Greeter service.
@@ -29,7 +28,6 @@ const (
 type GreeterClient interface {
 	// Sends a greeting
 	SayHello(ctx context.Context, in *HelloRequest, opts ...grpc.CallOption) (*HelloReply, error)
-	Video(ctx context.Context, in *KuaiyinVideoRequest, opts ...grpc.CallOption) (*KuaiyinVideoResponse, error)
 }
 
 type greeterClient struct {
@@ -49,22 +47,12 @@ func (c *greeterClient) SayHello(ctx context.Context, in *HelloRequest, opts ...
 	return out, nil
 }
 
-func (c *greeterClient) Video(ctx context.Context, in *KuaiyinVideoRequest, opts ...grpc.CallOption) (*KuaiyinVideoResponse, error) {
-	out := new(KuaiyinVideoResponse)
-	err := c.cc.Invoke(ctx, Greeter_Video_FullMethodName, in, out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
 // GreeterServer is the server API for Greeter service.
 // All implementations must embed UnimplementedGreeterServer
 // for forward compatibility
 type GreeterServer interface {
 	// Sends a greeting
 	SayHello(context.Context, *HelloRequest) (*HelloReply, error)
-	Video(context.Context, *KuaiyinVideoRequest) (*KuaiyinVideoResponse, error)
 	mustEmbedUnimplementedGreeterServer()
 }
 
@@ -74,9 +62,6 @@ type UnimplementedGreeterServer struct {
 
 func (UnimplementedGreeterServer) SayHello(context.Context, *HelloRequest) (*HelloReply, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method SayHello not implemented")
-}
-func (UnimplementedGreeterServer) Video(context.Context, *KuaiyinVideoRequest) (*KuaiyinVideoResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method Video not implemented")
 }
 func (UnimplementedGreeterServer) mustEmbedUnimplementedGreeterServer() {}
 
@@ -109,24 +94,6 @@ func _Greeter_SayHello_Handler(srv interface{}, ctx context.Context, dec func(in
 	return interceptor(ctx, in, info, handler)
 }
 
-func _Greeter_Video_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(KuaiyinVideoRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(GreeterServer).Video(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: Greeter_Video_FullMethodName,
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(GreeterServer).Video(ctx, req.(*KuaiyinVideoRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
 // Greeter_ServiceDesc is the grpc.ServiceDesc for Greeter service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -137,10 +104,6 @@ var Greeter_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "SayHello",
 			Handler:    _Greeter_SayHello_Handler,
-		},
-		{
-			MethodName: "Video",
-			Handler:    _Greeter_Video_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
