# kuaiyin-cloud/kuaiyin-video/api/video/v1/greeter.pb.go
@@ -1,0 +1,210 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.32.0
+// 	protoc        v3.20.3
+// source: video/v1/greeter.proto
+
+package v1
+
+import (
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type GetVideoRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *GetVideoRequest) Reset() {
+	*x = GetVideoRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_video_v1_greeter_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetVideoRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetVideoRequest) ProtoMessage() {}
+
+func (x *GetVideoRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_video_v1_greeter_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetVideoRequest.ProtoReflect.Descriptor instead.
+func (*GetVideoRequest) Descriptor() ([]byte, []int) {
+	return file_video_v1_greeter_proto_rawDescGZIP(), []int{0}
+}
+
+type GetVideoReply struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	// @gotags: json:"titlet"
+	Title string `protobuf:"bytes,1,opt,name=Title,proto3" json:"Title,omitempty"`
+}
+
+func (x *GetVideoReply) Reset() {
+	*x = GetVideoReply{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_video_v1_greeter_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetVideoReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetVideoReply) ProtoMessage() {}
+
+func (x *GetVideoReply) ProtoReflect() protoreflect.Message {
+	mi := &file_video_v1_greeter_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetVideoReply.ProtoReflect.Descriptor instead.
+func (*GetVideoReply) Descriptor() ([]byte, []int) {
+	return file_video_v1_greeter_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *GetVideoReply) GetTitle() string {
+	if x != nil {
+		return x.Title
+	}
+	return ""
+}
+
+var File_video_v1_greeter_proto protoreflect.FileDescriptor
+
+var file_video_v1_greeter_proto_rawDesc = []byte{
+	0x0a, 0x16, 0x76, 0x69, 0x64, 0x65, 0x6f, 0x2f, 0x76, 0x31, 0x2f, 0x67, 0x72, 0x65, 0x65, 0x74,
+	0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x08, 0x76, 0x69, 0x64, 0x65, 0x6f, 0x2e,
+	0x76, 0x31, 0x1a, 0x1c, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61,
+	0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x22, 0x11, 0x0a, 0x0f, 0x47, 0x65, 0x74, 0x56, 0x69, 0x64, 0x65, 0x6f, 0x52, 0x65, 0x71, 0x75,
+	0x65, 0x73, 0x74, 0x22, 0x25, 0x0a, 0x0d, 0x47, 0x65, 0x74, 0x56, 0x69, 0x64, 0x65, 0x6f, 0x52,
+	0x65, 0x70, 0x6c, 0x79, 0x12, 0x14, 0x0a, 0x05, 0x54, 0x69, 0x74, 0x6c, 0x65, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x05, 0x54, 0x69, 0x74, 0x6c, 0x65, 0x32, 0x60, 0x0a, 0x07, 0x47, 0x72,
+	0x65, 0x65, 0x74, 0x65, 0x72, 0x12, 0x55, 0x0a, 0x08, 0x47, 0x65, 0x74, 0x56, 0x69, 0x64, 0x65,
+	0x6f, 0x12, 0x19, 0x2e, 0x76, 0x69, 0x64, 0x65, 0x6f, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74,
+	0x56, 0x69, 0x64, 0x65, 0x6f, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x17, 0x2e, 0x76,
+	0x69, 0x64, 0x65, 0x6f, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x56, 0x69, 0x64, 0x65, 0x6f,
+	0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x15, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0f, 0x3a, 0x01, 0x2a,
+	0x22, 0x0a, 0x2f, 0x76, 0x69, 0x64, 0x65, 0x6f, 0x2f, 0x67, 0x65, 0x74, 0x42, 0x48, 0x0a, 0x17,
+	0x64, 0x65, 0x76, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76,
+	0x69, 0x64, 0x65, 0x6f, 0x2e, 0x76, 0x31, 0x42, 0x0c, 0x56, 0x69, 0x64, 0x65, 0x6f, 0x50, 0x72,
+	0x6f, 0x74, 0x6f, 0x56, 0x31, 0x50, 0x01, 0x5a, 0x1d, 0x6b, 0x75, 0x61, 0x69, 0x79, 0x69, 0x6e,
+	0x2d, 0x76, 0x69, 0x64, 0x65, 0x6f, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x69, 0x64, 0x65, 0x6f,
+	0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_video_v1_greeter_proto_rawDescOnce sync.Once
+	file_video_v1_greeter_proto_rawDescData = file_video_v1_greeter_proto_rawDesc
+)
+
+func file_video_v1_greeter_proto_rawDescGZIP() []byte {
+	file_video_v1_greeter_proto_rawDescOnce.Do(func() {
+		file_video_v1_greeter_proto_rawDescData = protoimpl.X.CompressGZIP(file_video_v1_greeter_proto_rawDescData)
+	})
+	return file_video_v1_greeter_proto_rawDescData
+}
+
+var file_video_v1_greeter_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_video_v1_greeter_proto_goTypes = []interface{}{
+	(*GetVideoRequest)(nil), // 0: video.v1.GetVideoRequest
+	(*GetVideoReply)(nil),   // 1: video.v1.GetVideoReply
+}
+var file_video_v1_greeter_proto_depIdxs = []int32{
+	0, // 0: video.v1.Greeter.GetVideo:input_type -> video.v1.GetVideoRequest
+	1, // 1: video.v1.Greeter.GetVideo:output_type -> video.v1.GetVideoReply
+	1, // [1:2] is the sub-list for method output_type
+	0, // [0:1] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_video_v1_greeter_proto_init() }
+func file_video_v1_greeter_proto_init() {
+	if File_video_v1_greeter_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_video_v1_greeter_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetVideoRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_video_v1_greeter_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetVideoReply); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_video_v1_greeter_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_video_v1_greeter_proto_goTypes,
+		DependencyIndexes: file_video_v1_greeter_proto_depIdxs,
+		MessageInfos:      file_video_v1_greeter_proto_msgTypes,
+	}.Build()
+	File_video_v1_greeter_proto = out.File
+	file_video_v1_greeter_proto_rawDesc = nil
+	file_video_v1_greeter_proto_goTypes = nil
+	file_video_v1_greeter_proto_depIdxs = nil
+}
