# kuaiyin-cloud/kuaiyin-video/api/video/v1/greeter_http.pb.go
@@ -1,0 +1,78 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.7.2
+// - protoc             v3.20.3
+// source: video/v1/greeter.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationGreeterGetVideo = "/video.v1.Greeter/GetVideo"
+
+type GreeterHTTPServer interface {
+	GetVideo(context.Context, *GetVideoRequest) (*GetVideoReply, error)
+}
+
+func RegisterGreeterHTTPServer(s *http.Server, srv GreeterHTTPServer) {
+	r := s.Route("/")
+	r.POST("/video/get", _Greeter_GetVideo0_HTTP_Handler(srv))
+}
+
+func _Greeter_GetVideo0_HTTP_Handler(srv GreeterHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetVideoRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationGreeterGetVideo)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetVideo(ctx, req.(*GetVideoRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetVideoReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type GreeterHTTPClient interface {
+	GetVideo(ctx context.Context, req *GetVideoRequest, opts ...http.CallOption) (rsp *GetVideoReply, err error)
+}
+
+type GreeterHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewGreeterHTTPClient(client *http.Client) GreeterHTTPClient {
+	return &GreeterHTTPClientImpl{client}
+}
+
+func (c *GreeterHTTPClientImpl) GetVideo(ctx context.Context, in *GetVideoRequest, opts ...http.CallOption) (*GetVideoReply, error) {
+	var out GetVideoReply
+	pattern := "/video/get"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationGreeterGetVideo))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
